<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
	android:background="@color/grey">
    
    <com.zykj.hihome.view.MyCommonTitle 
        android:id="@+id/aci_mytitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/forty_five"
        android:layout_margin="@dimen/fifteen">
		<Button 
		    android:id="@+id/aci_button"
			android:layout_width="@dimen/one_hundred"
	        android:layout_height="match_parent"
	        android:layout_alignParentRight="true"
	        android:text="@string/friend_find"
	        android:textSize="@dimen/eighteen"
	        android:textColor="@color/white"
	        android:background="@drawable/bg_round_theme"/>
		<EditText 
		    android:id="@+id/aci_edittext"
			android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_marginRight="@dimen/fifteen"
	        android:background="@drawable/bg_round_white"
	        android:paddingLeft="@dimen/thirty"
	        android:hint="@string/friend_name"
	        android:layout_toLeftOf="@id/aci_button"/>
		<ImageView 
			android:layout_width="@dimen/twenty"
	        android:layout_height="@dimen/twenty"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="@dimen/five"
	        android:contentDescription="@string/app_name"
	        android:src="@drawable/img_search"/>
    </RelativeLayout>
    <ListView 
		android:id="@+id/aci_listview"
		android:visibility="gone"
		android:layout_width="match_parent"
        android:layout_height="match_parent"/>
	<LinearLayout 
	    android:id="@+id/search_none"
		android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/two_hundred"
        android:orientation="vertical">
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/one_hundred"
	        android:gravity="bottom|center_horizontal"
	        android:text="@string/friend_search_info"
	        android:textColor="@color/gray_font"/>
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/friend_link"
	        android:textColor="@color/theme_color"
	        android:gravity="center_horizontal"/>
	</LinearLayout>
</LinearLayout>