<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_logiin"
    android:orientation="vertical" >

    <com.zykj.hihome.view.MyCommonTitle
        android:id="@+id/aci_mytitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/twenty"
            android:src="@drawable/ic_user_avtor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/thirty_five"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="@string/user_name"
                android:textColor="@color/text_color"
                android:textSize="@dimen/t_twenty" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/forty"
                android:layout_marginLeft="@dimen/ten"
                android:layout_marginRight="@dimen/twenty"
                android:layout_weight="3"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/thirty_five"
                    android:background="@drawable/bg_null_white"
                    android:hint="@string/user_hint_name"
                    android:inputType="textPassword"
                    android:textColor="@color/edit_hint_color" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/text_color" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/thirty_five"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="@string/user_sex"
                android:textColor="@color/text_color"
                android:textSize="@dimen/t_twenty" />

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="@dimen/forty"
                android:layout_marginLeft="@dimen/ten"
                android:layout_marginRight="@dimen/twenty"
                android:layout_weight="3"
                android:orientation="horizontal" >

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/man" />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/woman" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/thirty_five"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="@string/user_age"
                android:textColor="@color/text_color"
                android:textSize="@dimen/t_twenty" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/forty"
                android:layout_marginLeft="@dimen/ten"
                android:layout_marginRight="@dimen/twenty"
                android:layout_weight="3"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/user_age"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/thirty_five"
                    android:background="@drawable/bg_null_white"
                    android:hint="@string/user_hint_age"
                    android:inputType="textPassword"
                    android:textColor="@color/edit_hint_color" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/text_color" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/thirty_five"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="@string/user_sign"
                android:textColor="@color/text_color"
                android:textSize="@dimen/t_twenty" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/forty"
                android:layout_marginLeft="@dimen/ten"
                android:layout_marginRight="@dimen/twenty"
                android:layout_weight="3"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/user_sign"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/thirty_five"
                    android:background="@drawable/bg_null_white"
                    android:hint="@string/user_hint_sign"
                    android:inputType="textPassword"
                    android:textColor="@color/edit_hint_color" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/text_color" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/forty"
            android:gravity="center" >

            <Button
                android:id="@+id/positive"
                style="@style/button_text"
                android:layout_width="@dimen/one_hundred_fifty"
                android:layout_height="@dimen/forty"
                android:gravity="center"
                android:text="@string/comfirm" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>