<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="@color/grey">
	<LinearLayout 
	    android:id="@+id/bottom_layout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:padding="@dimen/ten"
	    android:orientation="horizontal">
	    <Button 
	        android:id="@+id/aci_button_left"
		    android:layout_width="match_parent"
			android:layout_height="@dimen/forty"
		    android:layout_weight="1"
		    android:text="@string/friend_add"
		    android:textSize="@dimen/t_twenty"
		    android:layout_marginRight="@dimen/three"
		    android:textColor="@color/theme_colorhuang"
		    android:background="@drawable/bg_round_white"/>
	    <Button 
	        android:id="@+id/aci_button_right"
		    android:layout_width="match_parent"
			android:layout_height="@dimen/forty"
		    android:layout_weight="1"
		    android:text="@string/friend_speak"
		    android:textSize="@dimen/t_twenty"
		    android:layout_marginLeft="@dimen/three"
		    android:textColor="@color/white"
		    android:background="@drawable/bg_round_theme"/>
	</LinearLayout>
	<ScrollView 
	    android:layout_above="@id/bottom_layout"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
    
		    <com.zykj.hihome.view.MyCommonTitle 
		        android:id="@+id/aci_mytitle"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
		    
		    <LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="150dp"
			    android:orientation="vertical"
			    android:background="@drawable/gerenback">
		        <View 
				    android:layout_width="wrap_content"
				    android:layout_height="0.0dip"
				    android:layout_weight="1"/>
		        <LinearLayout 
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:gravity="center_vertical"
				    android:orientation="horizontal">
					<com.zykj.hihome.utils.CircularImage
			            android:id="@+id/rv_me_avatar"
			            android:layout_width="@dimen/sixty_five"
			            android:layout_height="@dimen/sixty_five"
			            android:layout_marginLeft="@dimen/fifteen"
					    android:src="@drawable/touxiang"/>
		            <TextView 
		            	android:id="@+id/aci_title"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:text="@string/friend_detail"
					    android:textSize="@dimen/t_twenty"
					    android:textColor="@color/white"/>
		        </LinearLayout>
		    </LinearLayout>
		    <LinearLayout 
				android:orientation="horizontal"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:padding="@dimen/fifteen"
			    android:background="@drawable/devide_gray_bt"
			    android:gravity="center_vertical">
		        <TextView 
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:textColor="@color/theme_color"
				    android:textSize="@dimen/t_twenty"
				    android:text="@string/friend_nick"/>
		        <TextView 
		            android:id="@+id/aci_nick"
				    android:layout_width="0.0dip"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:textColor="@color/radio_color"
				    android:textSize="@dimen/t_twenty"/>
		        <ImageView 
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:contentDescription="@string/app_name"
				    android:src="@drawable/yhjt"/>
		    </LinearLayout>
		    <LinearLayout 
				android:orientation="horizontal"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:padding="@dimen/fifteen"
			    android:background="@drawable/devide_gray_bt"
			    android:gravity="center_vertical">
		        <TextView 
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:textColor="@color/theme_color"
				    android:textSize="@dimen/t_twenty"
				    android:text="@string/friend_sign"/>
		        <TextView 
		            android:id="@+id/aci_sign"
				    android:layout_width="0.0dip"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:textColor="@color/radio_color"
				    android:textSize="@dimen/t_twenty"/>
		    </LinearLayout>
		    <LinearLayout 
				android:orientation="horizontal"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:padding="@dimen/fifteen"
			    android:background="@drawable/devide_gray_bt"
			    android:gravity="center_vertical">
		        <TextView 
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:textColor="@color/theme_color"
				    android:textSize="@dimen/t_twenty"
				    android:text="@string/friend_type"/>
		        <TextView 
		            android:id="@+id/aci_type"
				    android:layout_width="0.0dip"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:textColor="@color/radio_color"
				    android:textSize="@dimen/t_twenty"
				    android:text="@string/friend_none"/>
		        <ImageView 
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:contentDescription="@string/app_name"
				    android:src="@drawable/yhjt"/>
		    </LinearLayout>
		    <LinearLayout 
		    	android:id="@+id/aci_task"
				android:orientation="horizontal"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:padding="@dimen/fifteen"
			    android:background="@drawable/devide_gray_bt"
			    android:gravity="center_vertical">
		        <TextView 
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:textColor="@color/theme_color"
				    android:textSize="@dimen/t_twenty"
				    android:text="@string/friend_task"/>
		        <TextView 
				    android:layout_width="0.0dip"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:textColor="@color/radio_color"
				    android:textSize="@dimen/t_twenty"
				    android:text="@string/friend_look"/>
		        <ImageView 
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:contentDescription="@string/app_name"
				    android:src="@drawable/yhjt"/>
		    </LinearLayout>
		    <LinearLayout 
				android:orientation="horizontal"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:padding="@dimen/fifteen"
			    android:background="@drawable/devide_gray_bt"
			    android:gravity="center_vertical">
		        <TextView 
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:textColor="@color/theme_color"
				    android:textSize="@dimen/t_twenty"
				    android:text="@string/friend_photo"/>
		        <GridView 
		            android:id="@+id/aci_gridview"
				    android:layout_width="0.0dip"
				    android:layout_height="wrap_content"
				    android:numColumns="4"
				    android:layout_weight="1"/>
		        <ImageView 
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:contentDescription="@string/app_name"
				    android:src="@drawable/yhjt"/>
		    </LinearLayout>
		</LinearLayout>
	</ScrollView>
</RelativeLayout>