<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_color"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >
        <com.zykj.hihome.utils.CircularImage
            android:id="@+id/rv_me_avatar"
            android:layout_width="@dimen/thirty_five"
            android:layout_height="@dimen/thirty_five"
            android:layout_marginLeft="10dp"
		    android:layout_centerVertical="true"
            android:background="@drawable/gerentouxiang"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/task"
            android:textSize="16sp"
            android:textColor="@color/white" />

        <ImageView
            android:contentDescription="@string/app_name"
            android:id="@+id/img_create_anniversary"
            android:layout_width="@dimen/thirty"
            android:layout_height="@dimen/thirty"
            android:src="@drawable/ic_create_anniversary"
            android:layout_toLeftOf="@+id/img_publish_task"
            android:layout_marginRight="@dimen/ten"/>

        <ImageView
            android:contentDescription="@string/app_name"
            android:id="@+id/img_publish_task"
            android:layout_width="@dimen/thirty"
            android:layout_height="@dimen/thirty"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/ten"
            android:src="@drawable/ic_publish_task" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >

        <RadioGroup
            android:id="@+id/tab_rwGroup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/eighty"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <RadioButton
                android:id="@+id/radio_selfTask"
                style="@style/tab_rw_button"
                android:checked="true"
                android:drawableTop="@drawable/tab_rw_self"
                android:text="@string/task_self" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey" />

            <RadioButton
                android:id="@+id/radio_receiveTask"
                style="@style/tab_rw_button"
                android:drawableTop="@drawable/tab_rw_receive"
                android:text="@string/task_reserve" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey" />

            <RadioButton
                android:id="@+id/radio_publishTask"
                style="@style/tab_rw_button"
                android:drawableTop="@drawable/tab_rw_publish"
                android:text="@string/task_send" />
        </RadioGroup>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/renwu_framelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>
</LinearLayout>