<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey" >
    
    <com.zykj.hihome.view.MyCommonTitle 
        android:id="@+id/aci_mytitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/one_hundred"
	    android:orientation="horizontal"
	    android:background="@color/white"
	    android:gravity="center_vertical"
	    android:padding="@dimen/ten">
        <com.zykj.hihome.utils.CircularImage
            android:id="@+id/rv_me_avatar"
            android:layout_width="@dimen/sixty_five"
            android:layout_height="@dimen/sixty_five"
            android:layout_marginLeft="@dimen/fifteen"
		    android:src="@drawable/touxiang"/>
        <TextView 
	    	android:id="@+id/aci_info"
		    android:layout_width="0.0dip"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:layout_marginTop="@dimen/six"
		    android:layout_marginLeft="@dimen/eighteen"
		    android:textSize="@dimen/t_twenty"
		    android:text="@string/friend_detail"/>
        <ImageView 
            android:layout_width="@dimen/twenty"
            android:layout_height="@dimen/twenty"
		    android:layout_marginTop="@dimen/six"
            android:src="@drawable/ic_task_into"/>
    </LinearLayout>
	<TextView 
	    android:id="@+id/aci_remark"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/friend_nick"
	    android:textSize="@dimen/twenty"
	    android:textColor="@color/state_color"
	    android:layout_marginTop="@dimen/twelve"
	    android:background="@color/white"
	    android:padding="@dimen/ten"/>
	<LinearLayout 
	    android:id="@+id/bottom_layout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="@dimen/twenty"
	    android:padding="@dimen/ten"
	    android:orientation="horizontal">
	    <Button 
	        android:id="@+id/aci_button_left"
		    android:layout_width="match_parent"
			android:layout_height="@dimen/forty"
		    android:layout_weight="1"
		    android:text="@string/friend_refuse"
		    android:textSize="@dimen/t_twenty"
		    android:layout_marginRight="@dimen/three"
		    android:textColor="@color/theme_colorhuang"
		    android:background="@drawable/bg_round_white"/>
	    <Button 
	        android:id="@+id/aci_button_right"
		    android:layout_width="match_parent"
			android:layout_height="@dimen/forty"
		    android:layout_weight="1"
		    android:text="@string/friend_agree"
		    android:textSize="@dimen/t_twenty"
		    android:layout_marginLeft="@dimen/three"
		    android:textColor="@color/white"
		    android:background="@drawable/bg_round_theme"/>
	</LinearLayout>
</LinearLayout>
